--- a/web/leveltable.html
+++ b/web/leveltable.html
@@ -2,117 +2,182 @@
 <html>
 <head>
     <title>IV LEVEL TABLE</title>
-    <link rel = "icon" href = "logo.png"  type = "image/x-icon">
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" charset="utf8"
+            src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body style="text-align:center;">
-    <div class="row mt-3">
-        <div class="col-sm-12 mt-3">
-            <h1>LEVEL TABLE</h1>
-        </div>
-        <div class="col-sm-12 mt-3">
-            <h4 id="errormsg"></h4>
+<div class="row mt-3">
+    <div class="col-sm-12 mt-3">
+        <h1>LEVEL TABLE</h1>
+    </div>
+    <div class="col-sm-12 mt-3">
+        <h4 id="errormsg"></h4>
+    </div>
+</div>
+<div class="row mt-3 w-50 mx-auto text-center">
+    <div class="col-sm-2">
+        <div class="input-group">
+            <input type="text" value="FPR292" class="form-control" id="zid" placeholder="Enter Id">
         </div>
     </div>
-    <div class="row mt-3 w-50 mx-auto text-center" >
-        <div class="col-sm-3">
-            <div class="input-group">
-                <input type="text" value="FPR292" class="form-control" id="zid" placeholder="Enter Id">
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="input-group">
-                <input type="password" value="Zerodha2@2@" class="form-control" id="zpass" placeholder="Enter Password">
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="input-group">
-                <input type="number" value="100599" class="form-control" id="zpin" placeholder="Enter Pinnumber">
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <button type="button" class="btn btn-primary" onclick="login()">Connect Account</button>
+    <div class="col-sm-3">
+        <div class="input-group">
+            <input type="password" value="Zerodha2@2@" class="form-control" id="zpass" placeholder="Enter Password">
         </div>
     </div>
-    <div id="infodiv">
-        <div class="row mt-5 px-5" >
-            <div class="col-sm-2">
-                <select class="form-select" id="exchange" aria-label="Default select example">
-                    <option selected disabled>Exchange</option>
-                    <option value="BCD">BCD</option>
-                    <option value="BSC">BSC</option>
-                    <option value="CDS">CDS</option>
-                    <option value="MCX">MCX</option>
-                    <option value="NSE">NSE</option>
-                    <option value="NFO">NFO</option>
-                </select>
-            </div>
-            <div class="col-sm-3">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="stoken" placeholder="Enter Token">
-                </div>
-            </div>
-            <div class="col-sm-1">
-                <select class="form-select" id="timeframe" aria-label="Default select example">
-                    <option selected disabled>Candle</option>
-                    <option value="minute">1</option>
-                    <option value="3minute">3</option>
-                    <option value="5minute">5</option>
-                    <option value="10minute">10</option>
-                    <option value="15minute">15</option>
-                    <option value="30minute">30</option>
-                    <option value="60minute">60</option>
-                </select>
-            </div>
-            <div class="col-sm-2">
-                <div class="input-group">
-                    <input type="time" class="form-control" id="ctime">
-                </div>
-            </div>
-            <div class="col-sm-2">
-                <div class="input-group">
-                    <input type="date" class="form-control" id="cdate">
-                </div>
-            </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn btn-success" onclick="getLevels()">Get Buy Sell Levels</button>
-            </div>
-        </div>
-        <div class="mt-5 mx-5">
-            <table id="leveltable">
-                <thead>
-                    <tr>
-                        <th>Exchange</th>
-                        <th>Token</th>
-                        <th>Timeframe</th>
-                        <th>Candle Time</th>
-                        <th>Date</th>
-                        <th>Open</th>
-                        <th>High</th>
-                        <th>Low</th>
-                        <th>Close</th>
-                        <th>B1</th>
-                        <th>B2</th>
-                        <th>S1</th>
-                        <th>S2</th>
-                        <th>Remove</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+    <div class="col-sm-3">
+        <div class="input-group">
+            <input type="number" value="100599" class="form-control" id="zpin" placeholder="Enter Pinnumber">
         </div>
     </div>
-    <script type="text/javascript" src="../eel.js"></script>
-    <script src="uihelper.js"></script>
+    <div class="col-sm-4">
+        <button type="button" class="btn btn-primary" onclick="login()">Connect Account</button>
+    </div>
+</div>
+<div id="infodiv">
+    <div class="row mt-5 px-5">
+        <div class="col-sm-2">
+            <select class="form-select" id="exchange" aria-label="Default select example">
+                <option selected disabled>Exchange</option>
+                <option value="BCD">BCD</option>
+                <option value="BSC">BSC</option>
+                <option value="CDS">CDS</option>
+                <option value="MCX">MCX</option>
+                <option value="NSE">NSE</option>
+                <option value="NFO">NFO</option>
+            </select>
+        </div>
+        <div class="col-sm-3">
+            <div class="input-group">
+                <input type="text" class="form-control" id="stoken" placeholder="Enter Token">
+            </div>
+        </div>
+        <div class="col-sm-1">
+            <select class="form-select" id="timeframe" aria-label="Default select example">
+                <option selected disabled>Candle</option>
+                <option value="minute">1</option>
+                <option value="3minute">3</option>
+                <option value="5minute">5</option>
+                <option value="10minute">10</option>
+                <option value="15minute">15</option>
+                <option value="30minute">30</option>
+                <option value="60minute">60</option>
+            </select>
+        </div>
+        <div class="col-sm-2">
+            <div class="input-group">
+                <input type="time" class="form-control" id="ctime">
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="input-group">
+                <input type="date" class="form-control" id="cdate">
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-success" onclick="getLevels()">Get Buy Sell Levels</button>
+        </div>
+    </div>
+    <div class="mt-5 mx-5">
+        <table id="leveltable">
+            <thead>
+            <tr>
+                <th>Exchange</th>
+                <th>Token</th>
+                <th>Timeframe</th>
+                <th>Candle Time</th>
+                <th>Date</th>
+                <th>Open</th>
+                <th>High</th>
+                <th>Low</th>
+                <th>Close</th>
+                <th>B1</th>
+                <th>B2</th>
+                <th>S1</th>
+                <th>S2</th>
+                <th>Remove</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div id="tradediv">
+    <div class="card">
+        <div class="card-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="row">
+                            <div class="col-md-2 ">ID :</div>
+                            <div class="col-md-2"><h3>12</h3></div>
+                            <div class="col-md-3">Token :</div>
+                            <div class="col-md-5"><h3>12</h3></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">Action :</div>
+                            <div class="col-md-8"><h3>Buy</h3></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">Status :</div>
+                            <div class="col-md-8"><h3>Waiting for buy</h3></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">Time :</div>
+                            <div class="col-md-8"><h3>12:35</h3></div>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="row">
+                            <div class="col-md-6">Target :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">SL :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">LTP :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">Trigger :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="row">
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtarget" placeholder="New Target"></div>
+                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                        </div>
+                        <div class="row mt-4">
+                            <div class="col-md-6"><input type="number" class="form-control" id="newsl" placeholder="New SL"></div>
+                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-4"><button type="button" class="btn btn-secondary">Cancel</button></div>
+                            <div class="col-md-4"><button type="button" class="btn btn-danger">Square-off</button></div>
+                            <div class="col-md-4"><button type="button" class="btn btn-dark">Delete</button></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="../eel.js"></script>
+<script src="uihelper.js"></script>
 </body>
 
 </html>
