--- a/web/leveltable.html
+++ b/web/leveltable.html
@@ -104,6 +104,8 @@
                 <th>B2</th>
                 <th>S1</th>
                 <th>S2</th>
+                <th>trade type</th>
+                <th>trade Action</th>
                 <th>Remove</th>
             </tr>
             </thead>
@@ -112,59 +114,75 @@
         </table>
     </div>
 </div>
-<div id="tradediv">
+<div id="tradediv" hidden>
     <div class="card">
         <div class="card-body">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
                         <div class="row">
-                            <div class="col-md-2 ">ID :</div>
-                            <div class="col-md-2"><h3>12</h3></div>
-                            <div class="col-md-3">Token :</div>
-                            <div class="col-md-5"><h3>12</h3></div>
+                            <div class="col-md-4">ID :</div>
+                            <div class="col-md-8"><h3>12</h3></div>
                         </div>
-                        <div class="row">
+                        <div class="row mt-3">
+                            <div class="col-md-4">Token :</div>
+                            <div class="col-md-8"><h3>12</h3></div>
+                        </div>
+                        <div class="row mt-3">
                             <div class="col-md-4">Action :</div>
                             <div class="col-md-8"><h3>Buy</h3></div>
                         </div>
-                        <div class="row">
+                        <div class="row mt-3">
                             <div class="col-md-4">Status :</div>
                             <div class="col-md-8"><h3>Waiting for buy</h3></div>
                         </div>
-                        <div class="row">
+                        <div class="row mt-3">
                             <div class="col-md-4">Time :</div>
                             <div class="col-md-8"><h3>12:35</h3></div>
                         </div>
+
                     </div>
                     <div class="col-sm">
-                        <div class="row">
-                            <div class="col-md-6">Target :</div>
-                            <div class="col-md-6"><h3>13.45</h3></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">SL :</div>
-                            <div class="col-md-6"><h3>13.45</h3></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">LTP :</div>
-                            <div class="col-md-6"><h3>13.45</h3></div>
-                        </div>
                         <div class="row">
                             <div class="col-md-6">Trigger :</div>
                             <div class="col-md-6"><h3>13.45</h3></div>
                         </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6">SL :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6">Target :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6">Trailing :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6">LTP :</div>
+                            <div class="col-md-6"><h3>13.45</h3></div>
+                        </div>
+
                     </div>
                     <div class="col-sm">
                         <div class="row">
-                            <div class="col-md-6"><input type="number" class="form-control" id="newtarget" placeholder="New Target"></div>
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtrigger" placeholder="New Trigger"></div>
                             <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
                         </div>
-                        <div class="row mt-4">
+                        <div class="row mt-3">
                             <div class="col-md-6"><input type="number" class="form-control" id="newsl" placeholder="New SL"></div>
                             <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
                         </div>
                         <div class="row mt-3">
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtarget" placeholder="New Target"></div>
+                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtrailing" placeholder="New Trailing"></div>
+                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                        </div>
+                        <div class="row mt-4">
                             <div class="col-md-4"><button type="button" class="btn btn-secondary">Cancel</button></div>
                             <div class="col-md-4"><button type="button" class="btn btn-danger">Square-off</button></div>
                             <div class="col-md-4"><button type="button" class="btn btn-dark">Delete</button></div>
