--- a/web/leveltable.html
+++ b/web/leveltable.html
@@ -16,8 +16,19 @@
 </head>
 <body style="text-align:center;">
 <div class="row mt-3">
+    <div class="col-sm-1">
+        <button type="button" class="btn btn-primary" onclick="showLevels()">Show Levels</button>
+    </div>
+    <div class="col-sm-1">
+        <button type="button" class="btn btn-primary" onclick="showOrders()">Show Orders</button>
+    </div>
+    <div class="col-sm-1">
+        <button type="button" class="btn btn-primary" onclick="showUsers()">Show Users</button>
+    </div>
+</div>
+<div class="row mt-3">
     <div class="col-sm-12 mt-3">
-        <h1>LEVEL TABLE</h1>
+        <h1 id="title_text">LEVEL TABLE</h1>
     </div>
     <div class="col-sm-12 mt-3">
         <h4 id="errormsg"></h4>
@@ -114,7 +125,7 @@
         </table>
     </div>
 </div>
-<div id="tradediv" hidden>
+<div id="tradediv">
     <div class="card">
         <div class="card-body">
             <div class="container">
@@ -167,25 +178,43 @@
                     </div>
                     <div class="col-sm">
                         <div class="row">
-                            <div class="col-md-6"><input type="number" class="form-control" id="newtrigger" placeholder="New Trigger"></div>
-                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtrigger"
+                                                         placeholder="New Trigger"></div>
+                            <div class="col-md-6">
+                                <button type="button" class="btn btn-primary">Update</button>
+                            </div>
                         </div>
                         <div class="row mt-3">
-                            <div class="col-md-6"><input type="number" class="form-control" id="newsl" placeholder="New SL"></div>
-                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                            <div class="col-md-6"><input type="number" class="form-control" id="newsl"
+                                                         placeholder="New SL"></div>
+                            <div class="col-md-6">
+                                <button type="button" class="btn btn-primary">Update</button>
+                            </div>
                         </div>
                         <div class="row mt-3">
-                            <div class="col-md-6"><input type="number" class="form-control" id="newtarget" placeholder="New Target"></div>
-                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtarget"
+                                                         placeholder="New Target"></div>
+                            <div class="col-md-6">
+                                <button type="button" class="btn btn-primary">Update</button>
+                            </div>
                         </div>
                         <div class="row mt-3">
-                            <div class="col-md-6"><input type="number" class="form-control" id="newtrailing" placeholder="New Trailing"></div>
-                            <div class="col-md-6"><button type="button" class="btn btn-primary">Update</button></div>
+                            <div class="col-md-6"><input type="number" class="form-control" id="newtrailing"
+                                                         placeholder="New Trailing"></div>
+                            <div class="col-md-6">
+                                <button type="button" class="btn btn-primary">Update</button>
+                            </div>
                         </div>
                         <div class="row mt-4">
-                            <div class="col-md-4"><button type="button" class="btn btn-secondary">Cancel</button></div>
-                            <div class="col-md-4"><button type="button" class="btn btn-danger">Square-off</button></div>
-                            <div class="col-md-4"><button type="button" class="btn btn-dark">Delete</button></div>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-secondary">Cancel</button>
+                            </div>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-danger">Square-off</button>
+                            </div>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-dark">Delete</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -193,7 +222,7 @@
         </div>
     </div>
 </div>
-
+<div id="userdiv"></div>
 <script type="text/javascript" src="../eel.js"></script>
 <script src="uihelper.js"></script>
 </body>
