--- a/web/leveltable.html
+++ b/web/leveltable.html
@@ -60,7 +60,7 @@
             <select class="form-select" id="exchange" aria-label="Default select example">
                 <option selected disabled>Exchange</option>
                 <option value="BCD">BCD</option>
-                <option value="BSC">BSC</option>
+                <option value="BSE">BSE</option>
                 <option value="CDS">CDS</option>
                 <option value="MCX">MCX</option>
                 <option value="NSE">NSE</option>
@@ -126,9 +126,50 @@
     </div>
 </div>
 <div id="tradediv"></div>
-<div id="userdiv"></div>
+<div id="userdiv">
+    <div class="row mt-3 w-50 mx-auto text-center">
+        <div class="col-sm-2">
+            <div class="input-group">
+                <input type="text" class="form-control" id="userid" placeholder="Enter Id">
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="input-group">
+                <input type="password" class="form-control" id="userpass" placeholder="Password">
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="input-group">
+                <input type="number" class="form-control" id="userpin" placeholder="Pinnumber">
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="input-group">
+                <input type="number" class="form-control" id="userlot" placeholder="Lot">
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-primary" onclick="adduser()">Add</button>
+        </div>
+    </div>
+    <table id="usertable">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Id</th>
+            <th>Password</th>
+            <th>Pin</th>
+            <th>Lot</th>
+            <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 <script type="text/javascript" src="../eel.js"></script>
 <script src="uihelper.js"></script>
+<script src="users.js"></script>
 </body>
 
 </html>
