--- a/web/leveltable.html
+++ b/web/leveltable.html
@@ -35,19 +35,14 @@
     </div>
 </div>
 <div class="row mt-3 w-50 mx-auto text-center">
-    <div class="col-sm-2">
+    <div class="col-sm-4">
         <div class="input-group">
-            <input type="text" value="FPR292" class="form-control" id="zid" placeholder="Enter Id">
+            <input type="text" value="ky3cmqfglvl58il2" class="form-control" id="apikey" placeholder="Enter Api Key">
         </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class="input-group">
-            <input type="password" value="Zerodha2@2@" class="form-control" id="zpass" placeholder="Enter Password">
-        </div>
-    </div>
-    <div class="col-sm-3">
-        <div class="input-group">
-            <input type="number" value="100599" class="form-control" id="zpin" placeholder="Enter Pinnumber">
+            <input type="text" value="FqVDCt58S62ERhGcP9tQWNzdQ0cJzHPK" class="form-control" id="accesstoken" placeholder="Enter Access Token">
         </div>
     </div>
     <div class="col-sm-4">
